Upate about secton on homepage 3 and update counter and make all footer same

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -363,10 +363,11 @@
       <div class="container">
         <div class="row g-4 align-items-center">
           <div class="col-lg-7 here-details">
-            <div class="hero-content-2 ">
+            <div class="hero-content-2">
               <span>New in Stock</span>
               <h1>
-                Discover the Latest <br> Icons in Our Collection
+                Discover the Latest <br />
+                Icons in Our Collection
               </h1>
               <p>
                 Discover cutting-edge innovation and exceptional <br />
@@ -383,55 +384,55 @@
             <div class="hero-content-2">
               <div class="hero-3-slider swiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide">
                     <img
-                        src="assets/img/homepage-3/slider-1.jpg"
-                        alt="RevAuto"
-                      />
+                      src="assets/img/homepage-3/slider-1.jpg"
+                      alt="RevAuto"
+                    />
 
-                      <div class="hero-3-footer">
-                        <h3>BMW i4 : M Sport</h3>
-                      </div>
+                    <div class="hero-3-footer">
+                      <h3>BMW i4 : M Sport</h3>
+                    </div>
                   </div>
 
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide">
                     <img
-                        src="assets/img/homepage-3/slider-2.jpg"
-                        alt="RevAuto"
-                      />
-                      <div class="hero-3-footer">
-                        <h3>BMW i4 : M Sport</h3>
-                      </div>
+                      src="assets/img/homepage-3/slider-2.jpg"
+                      alt="RevAuto"
+                    />
+                    <div class="hero-3-footer">
+                      <h3>BMW i4 : M Sport</h3>
+                    </div>
                   </div>
 
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide">
                     <img
-                        src="assets/img/homepage-3/slider-4.jpg"
-                        alt="RevAuto"
-                      />
-                      <div class="hero-3-footer">
-                        <h3>BMW i4 : M Sport</h3>
-                      </div>
+                      src="assets/img/homepage-3/slider-4.jpg"
+                      alt="RevAuto"
+                    />
+                    <div class="hero-3-footer">
+                      <h3>BMW i4 : M Sport</h3>
+                    </div>
                   </div>
 
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide">
                     <img
-                        src="assets/img/homepage-3/slider-6.jpg"
-                        alt="RevAuto"
-                      />
-                      <div class="hero-3-footer">
-                        <h3>BMW i4 : M Sport</h3>
-                      </div>
+                      src="assets/img/homepage-3/slider-6.jpg"
+                      alt="RevAuto"
+                    />
+                    <div class="hero-3-footer">
+                      <h3>BMW i4 : M Sport</h3>
+                    </div>
                   </div>
 
-                  <div class="swiper-slide ">
+                  <div class="swiper-slide">
                     <img
-                        src="assets/img/homepage-3/slider-7.jpg"
-                        alt="RevAuto"
-                      />
-                      <div class="hero-3-footer">
-                        <h3>BMW i4 : M Sport</h3>
-                      </div>
+                      src="assets/img/homepage-3/slider-7.jpg"
+                      alt="RevAuto"
+                    />
+                    <div class="hero-3-footer">
+                      <h3>BMW i4 : M Sport</h3>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -2004,9 +2005,8 @@
           </div>
           <div class="col-lg-6">
             <div class="seller-center-3-right">
-              
               <h2>GHeading tag</h2>
-              <h2>Get the Best Value for Your Car – Sell to Us Today</h2>
+              <h2>Get the Best Value for Your Car - Sell to Us Today</h2>
               <p>
                 Receive a competitive and fair price for your car with our
                 transparent evaluation process. Selling your car has never been
@@ -2113,7 +2113,10 @@
             <div class="left-side">
               <h4>Explore</h4>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, quasi commodi? Consectetur minus ducimus eligendi vel similique, cupiditate ipsum maiores beatae sed officia perferendis! Cupiditate voluptatibus culpa excepturi consectetur facilis!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                quasi commodi? Consectetur minus ducimus eligendi vel similique,
+                cupiditate ipsum maiores beatae sed officia perferendis!
+                Cupiditate voluptatibus culpa excepturi consectetur facilis!
               </p>
               <a href="#" class="navigate-btn mt-4">Schedule a Test Drive</a>
               <a href="#" class="navigate-btn mt-4">Buy Now</a>
@@ -2172,78 +2175,193 @@
     </section>
 
     <!-- About section -->
-    <section class="section-bg pt-5">
+    <section class="section-bg about-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-4" style="background-image: url('assets/img/long.png');background-size: contain;background-repeat: no-repeat;">
-
-          </div>
+          <div
+            class="col-md-4 overflow-hidden"
+            style="
+              background-image: url('assets/img/long.png');
+              background-size: cover;
+              background-position: bottom;
+            "
+          ></div>
           <div class="col-md-8">
-            <h2>Get the Best Value for Your Car – Sell to Us Today</h2>
-              <p>
-                Receive a competitive and fair price for your car with our
-                transparent evaluation process. Selling your car has never been
-                this quick and hassle-free.
-              </p>
+            <h2>Get the Best Value for Your Car - Sell to Us Today</h2>
+            <p>
+              Receive a competitive and fair price for your car with our
+              transparent evaluation process. Selling your car has never been
+              this quick and hassle-free.
+            </p>
 
-              <ul class="mt-4">
-                <li>
+            <ul class="mt-4">
+              <li class="about-5-list">
+                <div class="about-5-list-icon">
                   <i class="fa-solid fa-check"></i>
                   <h4>Trusted by Thousands, Nationwide Reach</h4>
-                  <p>
-                    As a leading car-selling service, we’re available across the
-                    country, ensuring you can sell your car conveniently, no
-                    matter where you are.
-                  </p>
-                </li>
-                <li>
+                </div>
+                <p>
+                  As a leading car-selling service, we’re available across the
+                  country, ensuring you can sell your car conveniently, no
+                  matter where you are.
+                </p>
+              </li>
+              <li class="about-5-list">
+                <div class="about-5-list-icon">
                   <i class="fa-solid fa-check"></i>
                   <h4>24/7 Support for a Stress-Free Experience</h4>
-                  <p>
-                    We’re here around the clock to assist you with any queries
-                    or concerns, making the car-selling process smooth and
-                    hassle-free.
-                  </p>
-                </li>
-                <li>
+                </div>
+                <p>
+                  We’re here around the clock to assist you with any queries or
+                  concerns, making the car-selling process smooth and
+                  hassle-free.
+                </p>
+              </li>
+              <li class="about-5-list">
+                <div class="about-5-list-icon">
                   <i class="fa-solid fa-check"></i>
                   <h4>Quick and Efficient Car Repairs for Sellers</h4>
-                  <p>
-                    Need minor fixes before selling? Our expert team resolves
-                    most car issues on-site, ensuring your vehicle is ready for
-                    a seamless sale.
-                  </p>
-                </li>
-              </ul>
+                </div>
+                <p>
+                  Need minor fixes before selling? Our expert team resolves most
+                  car issues on-site, ensuring your vehicle is ready for a
+                  seamless sale.
+                </p>
+              </li>
+            </ul>
 
-              <button>
-                Get Started <i class="fa-solid fa-arrow-right"></i>
-              </button>
+            <button>Get Started <i class="fa-solid fa-arrow-right"></i></button>
 
-              <div class="counter-wrapper">
-                <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
-                  <div class="content">
-                    <h2><span class="count">10</span>M+</h2>
-                    <p>Orders</p>
-                  </div>
+            <div class="counter-wrapper-3">
+              <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
+                <div class="content">
+                  <h2><span class="count">10</span>M+</h2>
+                  <p>Orders</p>
                 </div>
-                <div class="counter-box-3 active wow fadeInUp" data-wow-delay=".4s">
-                  <div class="content">
-                    <h2><span class="count">199</span>+</h2>
-                    <p>Vehicle Brands</p>
-                  </div>
+              </div>
+              <div
+                class="counter-box-3 active wow fadeInUp"
+                data-wow-delay=".4s"
+              >
+                <div class="content">
+                  <h2><span class="count">199</span>+</h2>
+                  <p>Vehicle Brands</p>
                 </div>
-                <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
-                  <div class="content">
-                    <h2><span class="count">200</span>K+</h2>
-                    <p>Available Parts</p>
-                  </div>
+              </div>
+              <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
+                <div class="content">
+                  <h2><span class="count">200</span>K+</h2>
+                  <p>Available Parts</p>
                 </div>
-                <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
-                  <div class="content">
-                    <h2><span class="count">12</span>K+</h2>
-                    <p>Experienced Workers</p>
-                  </div>
+              </div>
+              <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
+                <div class="content">
+                  <h2><span class="count">12</span>K+</h2>
+                  <p>Experienced Workers</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- News Section Start -->
+    <section class="news-section section-padding fix">
+      <div class="container">
+        <div class="section-title-area">
+          <div class="section-title">
+            <h6 class="wow fadeInUp">Latest News</h6>
+            <h2 class="wow fadeInUp" data-wow-delay=".3s">
+              Check out our blog <br />
+              posts
+            </h2>
+          </div>
+          <a
+            href="news.html"
+            class="theme-btn wow fadeInUp"
+            data-wow-delay=".5s"
+            >View More <i class="fa-regular fa-car"></i
+          ></a>
+        </div>
+        <div class="row">
+          <div
+            class="col-xl-4 col-lg-6 col-md-6 img-custom-anim-top wow"
+            data-wow-delay=".3s"
+          >
+            <div class="news-box-items">
+              <div class="news-image">
+                <img src="assets/img/news/01.jpg" alt="img" />
+              </div>
+              <div class="news-content">
+                <h3>
+                  <a href="news-details.html"
+                    >What to Look for When Buying a Pre-Owned Car</a
+                  >
+                </h3>
+                <p>
+                  From luxury and economy cars and find out which best suits
+                  your lifestyle.
+                </p>
+                <div class="link-btn-area">
+                  <a href="news-details.html" class="link">Read More</a>
+                  <a href="news-details.html" class="arrow-icon">
+                    <i class="fa-sharp fa-regular fa-arrow-up-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-6 col-md-6 img-custom-anim-top wow"
+            data-wow-delay=".5s"
+          >
+            <div class="news-box-items">
+              <div class="news-image">
+                <img src="assets/img/news/02.jpg" alt="img" />
+              </div>
+              <div class="news-content">
+                <h3>
+                  <a href="news-details.html"
+                    >Luxury Cars Economy Cars Which is Right for You</a
+                  >
+                </h3>
+                <p>
+                  From luxury and economy cars and find out which best suits
+                  your lifestyle.
+                </p>
+                <div class="link-btn-area">
+                  <a href="news-details.html" class="link">Read More</a>
+                  <a href="news-details.html" class="arrow-icon">
+                    <i class="fa-sharp fa-regular fa-arrow-up-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-6 col-md-6 img-custom-anim-top wow"
+            data-wow-delay=".7s"
+          >
+            <div class="news-box-items">
+              <div class="news-image">
+                <img src="assets/img/news/03.jpg" alt="img" />
+              </div>
+              <div class="news-content">
+                <h3>
+                  <a href="news-details.html"
+                    >Understanding Car Financing: What You Need to Know</a
+                  >
+                </h3>
+                <p>
+                  From luxury and economy cars and find out which best suits
+                  your lifestyle.
+                </p>
+                <div class="link-btn-area">
+                  <a href="news-details.html" class="link">Read More</a>
+                  <a href="news-details.html" class="arrow-icon">
+                    <i class="fa-sharp fa-regular fa-arrow-up-right"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -2253,10 +2371,7 @@
     </section>
 
     <!-- Footer section started -->
-    <footer
-      class="footer-3"
-      style="background-image: url('assets/img/footer-bg.jpg')"
-    >
+    <footer class="footer-3">
       <!-- contact info -->
       <div class="container">
         <div class="row">
@@ -2445,7 +2560,6 @@
       </div>
     </footer>
 
-
     <!--<< All JS Plugins >>-->
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <!--<< Viewport Js >>-->
@@ -2470,4 +2584,3 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-
