--- a/main-files/index-2.html
+++ b/main-files/index-2.html
@@ -1974,32 +1974,60 @@
       </div>
     </section>
 
-    <!-- Fotter Section Start -->
-    <section
-      class="footer-section fix bg-cover"
-      style="background-image: url('assets/img/footer-bg.jpg')"
-    >
-      <div class="cta-sale-section bg-2">
-        <div class="container">
-          <div class="cta-sale-wrapper">
-            <div class="cta-car-image img-custom-anim-left">
-              <img src="assets/img/cta-car.png" alt="img" />
+    <!-- Footer section started -->
+    <footer class="footer-3">
+      <!-- contact info -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div class="content">
+                <span>Contact Us</span>
+                <p>contact@revauto.com</p>
+              </div>
             </div>
-            <div class="cta-car-content">
-              <h2 class="wow fadeInUp">Sale 50% Off</h2>
-              <p class="wow fadeInUp" data-wow-delay=".3s">
-                On All Rental Cars For 1 Month
-              </p>
-              <a
-                href="car-details.html"
-                class="theme-btn wow fadeInUp"
-                data-wow-delay=".5s"
-                >Book Your Car <i class="fa-regular fa-car"></i
-              ></a>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div class="content">
+                <span>Call Us</span>
+                <p>+880 1218 123123</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-comments"></i>
+              </div>
+              <div class="content">
+                <span>Live Chat</span>
+                <p>Sunday - Friday 24/7</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </div>
+              <div class="content">
+                <span>Location</span>
+                <p>123 - Store Location</p>
+              </div>
             </div>
           </div>
         </div>
+
+        <hr />
       </div>
+
       <div class="container">
         <div class="footer-widgets-wrapper">
           <div class="row">
@@ -2008,23 +2036,27 @@
               data-wow-delay=".2s"
             >
               <div class="single-footer-widget">
-                <div class="widget-head">
-                  <h3>Utility Pages</h3>
+                <img src="assets/img/logo/white-logo.svg" alt="RevAuto" />
+                <p class="my-3 fs-6">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+
+                <div class="footer-3-social-wrapper">
+                  <a href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+
+                  <a href="#">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+
+                  <a href="#">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </div>
-                <ul class="list-items">
-                  <li>
-                    <a href="contact.html"> Term & Condition </a>
-                  </li>
-                  <li>
-                    <a href="contact.html"> Privacy Policy </a>
-                  </li>
-                  <li>
-                    <a href="service-details.html"> Legal Notice </a>
-                  </li>
-                  <li>
-                    <a href="contact.html"> Accessibility </a>
-                  </li>
-                </ul>
               </div>
             </div>
             <div
@@ -2097,22 +2129,40 @@
           </div>
         </div>
         <div class="footer-bottom-wrapper">
-          <p>
-            <a href="contact.html" class="wow fadeInUp" data-wow-delay=".3s"
-              >Terms of Use</a
-            >
-          </p>
           <p class="wow fadeInUp" data-wow-delay=".5s">
             © 2024 RevAuto. All rights reserved.
           </p>
-          <p>
-            <a href="contact.html" class="wow fadeInUp" data-wow-delay=".7s"
-              >Privacy Policy</a
-            >
-          </p>
+          <div class="d-flex align-items-center gap-2">
+            <p>
+              <a href="contact.html" class="wow fadeInUp" data-wow-delay=".7s"
+                >Privacy Policy</a
+              >
+            </p>
+            <p>
+              <a href="contact.html" class="wow fadeInUp" data-wow-delay=".3s"
+                >Terms of Use</a
+              >
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 align-items-center">
+            <p>We Accept:</p>
+            <div>
+              <i class="fa-brands fa-cc-mastercard fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-visa fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-stripe fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-paypal fs-3"></i>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
+    </footer>
 
     <!--<< All JS Plugins >>-->
     <script src="assets/js/jquery-3.7.1.min.js"></script>
