--- a/main-files/shop-cart.html
+++ b/main-files/shop-cart.html
@@ -961,11 +961,60 @@
       </div>
     </section>
 
-    <!-- Fotter Section Start -->
-    <footer
-      class="footer-section fix bg-cover"
-      style="background-image: url('assets/img/footer-bg.jpg')"
-    >
+    <!-- Footer section started -->
+    <footer class="footer-3">
+      <!-- contact info -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div class="content">
+                <span>Contact Us</span>
+                <p>contact@revauto.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div class="content">
+                <span>Call Us</span>
+                <p>+880 1218 123123</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-comments"></i>
+              </div>
+              <div class="content">
+                <span>Live Chat</span>
+                <p>Sunday - Friday 24/7</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="footer-3-contact">
+              <div class="icon">
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </div>
+              <div class="content">
+                <span>Location</span>
+                <p>123 - Store Location</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr />
+      </div>
+
       <div class="container">
         <div class="footer-widgets-wrapper">
           <div class="row">
@@ -974,23 +1023,27 @@
               data-wow-delay=".2s"
             >
               <div class="single-footer-widget">
-                <div class="widget-head">
-                  <h3>Utility Pages</h3>
+                <img src="assets/img/logo/white-logo.svg" alt="RevAuto" />
+                <p class="my-3 fs-6">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+
+                <div class="footer-3-social-wrapper">
+                  <a href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+
+                  <a href="#">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+
+                  <a href="#">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </div>
-                <ul class="list-items">
-                  <li>
-                    <a href="contact.html"> Term & Condition </a>
-                  </li>
-                  <li>
-                    <a href="contact.html"> Privacy Policy </a>
-                  </li>
-                  <li>
-                    <a href="service-details.html"> Legal Notice </a>
-                  </li>
-                  <li>
-                    <a href="contact.html"> Accessibility </a>
-                  </li>
-                </ul>
               </div>
             </div>
             <div
@@ -1063,19 +1116,37 @@
           </div>
         </div>
         <div class="footer-bottom-wrapper">
-          <p>
-            <a href="contact.html" class="wow fadeInUp" data-wow-delay=".3s"
-              >Terms of Use</a
-            >
-          </p>
           <p class="wow fadeInUp" data-wow-delay=".5s">
             © 2024 RevAuto. All rights reserved.
           </p>
-          <p>
-            <a href="contact.html" class="wow fadeInUp" data-wow-delay=".7s"
-              >Privacy Policy</a
-            >
-          </p>
+          <div class="d-flex align-items-center gap-2">
+            <p>
+              <a href="contact.html" class="wow fadeInUp" data-wow-delay=".7s"
+                >Privacy Policy</a
+              >
+            </p>
+            <p>
+              <a href="contact.html" class="wow fadeInUp" data-wow-delay=".3s"
+                >Terms of Use</a
+              >
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 align-items-center">
+            <p>We Accept:</p>
+            <div>
+              <i class="fa-brands fa-cc-mastercard fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-visa fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-stripe fs-3"></i>
+            </div>
+            <div>
+              <i class="fa-brands fa-cc-paypal fs-3"></i>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
