update many thing

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -574,7 +574,7 @@
             <button class="car-section-3-active-right">Latest</button>
             <button>Popular</button>
             <button>On Sale</button>
-            <button class="d-flex align-items-center gap-1">
+            <button>
               <svg
                 stroke="currentColor"
                 fill="none"
@@ -2058,6 +2058,15 @@
         <div class="row">
           <div class="col-md-5 home-car-details-3-title">
             <h2>Toyota Land Cruiser 300</h2>
+
+            <div>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span>(3.5)</span>
+            </div>
           </div>
           <div class="col-md-7">
             <div class="row">
@@ -2119,6 +2128,7 @@
                 Cupiditate voluptatibus culpa excepturi consectetur facilis!
               </p>
               <a href="#" class="navigate-btn mt-4">Schedule a Test Drive</a>
+              <br />
               <a href="#" class="navigate-btn mt-4">Buy Now</a>
             </div>
           </div>
@@ -2132,8 +2142,15 @@
           <div class="col-md-3 d-flex flex-column gap-4">
             <div class="col">
               <div class="home-car-details-3-card">
-                <h4>Battery</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="img">
+                  <img src="assets/img/homepage-3/battery.png" alt="RevAuto" />
+                </div>
+                <div class="content">
+                  <h4>Battery</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -2152,8 +2169,15 @@
             </div>
             <div class="col">
               <div class="home-car-details-3-card">
-                <h4>Disk</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="img">
+                  <img src="assets/img/homepage-3/disk.png" alt="RevAuto" />
+                </div>
+                <div class="content">
+                  <h4>Disk</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
             <div class="col">
@@ -2187,50 +2211,105 @@
             "
           ></div>
           <div class="col-md-8">
-            <h2>Get the Best Value for Your Car - Sell to Us Today</h2>
-            <p>
-              Receive a competitive and fair price for your car with our
-              transparent evaluation process. Selling your car has never been
-              this quick and hassle-free.
+            <h2 class="about-3-heading section-bg">
+              RevAuto: Your Trusted Car Shop & Performance Center
+            </h2>
+            <p class="px-3">
+              Welcome to RevAuto, your one-stop destination for all things
+              automotive! At RevAuto, we are passionate about cars and committed
+              to providing exceptional services to meet the needs of every
+              driver. Whether you're looking for top-quality vehicles or expert
+              auto services, we are here to ensure your driving experience is
+              nothing short of outstanding.
             </p>
 
-            <ul class="mt-4">
-              <li class="about-5-list">
-                <div class="about-5-list-icon">
+            <ul class="my-4">
+              <li class="about-3-list">
+                <div class="about-3-list-icon section-bg">
                   <i class="fa-solid fa-check"></i>
-                  <h4>Trusted by Thousands, Nationwide Reach</h4>
+                  <h4>New & Pre-Owned Car Sales:</h4>
                 </div>
                 <p>
-                  As a leading car-selling service, we’re available across the
-                  country, ensuring you can sell your car conveniently, no
-                  matter where you are.
+                  Browse our selection of high-quality new and certified
+                  pre-owned vehicles from top manufacturers. Whether you're
+                  after a sleek sedan, rugged SUV, or high-performance sports
+                  car, we have the perfect vehicle for you.
                 </p>
               </li>
-              <li class="about-5-list">
-                <div class="about-5-list-icon">
+              <li class="about-3-list">
+                <div class="about-3-list-icon section-bg">
                   <i class="fa-solid fa-check"></i>
-                  <h4>24/7 Support for a Stress-Free Experience</h4>
+                  <h4>Expert Auto Repairs & Maintenance:</h4>
                 </div>
                 <p>
-                  We’re here around the clock to assist you with any queries or
-                  concerns, making the car-selling process smooth and
-                  hassle-free.
+                  Keep your vehicle in top shape with our comprehensive repair
+                  and maintenance services, including oil changes, tire
+                  rotations, brake checks, and engine diagnostics.
                 </p>
               </li>
-              <li class="about-5-list">
-                <div class="about-5-list-icon">
+              <li class="about-3-list">
+                <div class="about-3-list-icon section-bg">
                   <i class="fa-solid fa-check"></i>
-                  <h4>Quick and Efficient Car Repairs for Sellers</h4>
+                  <h4>Customization & Performance Upgrades:</h4>
                 </div>
                 <p>
-                  Need minor fixes before selling? Our expert team resolves most
-                  car issues on-site, ensuring your vehicle is ready for a
-                  seamless sale.
+                  Revitalize your ride with our customization options, from
+                  performance tuning to aesthetic enhancements. Upgrade your
+                  car’s exhaust system, suspension, wheels, or interior to match
+                  your personal style.
+                </p>
+              </li>
+              <li class="about-3-list">
+                <div class="about-3-list-icon section-bg">
+                  <i class="fa-solid fa-check"></i>
+                  <h4>Vehicle Financing & Trade-In Options:</h4>
+                </div>
+                <p>
+                  We offer competitive financing plans and hassle-free trade-in
+                  options to help make your car purchase easier and more
+                  affordable.
                 </p>
               </li>
             </ul>
 
-            <button>Get Started <i class="fa-solid fa-arrow-right"></i></button>
+            <div class="key-features-3">
+              <div class="row g-2">
+                <div class="col-6 h-100">
+                  <div class="p-3">
+                    <i class="fa-sharp fa-regular fa-arrow-right"></i>
+                    <span class="fw-semibold"
+                      >State-of-the-Art Diagnostic Center</span
+                    >
+                  </div>
+                </div>
+                <div class="col-6 h-100">
+                  <div class="p-3">
+                    <i class="fa-sharp fa-regular fa-arrow-right"></i>
+                    <span class="fw-semibold"
+                      >Car Tuning & Performance Upgrades</span
+                    >
+                  </div>
+                </div>
+                <div class="col-6 h-100">
+                  <div class="p-3">
+                    <i class="fa-sharp fa-regular fa-arrow-right"></i>
+                    <span class="fw-semibold">Comfortable Waiting Lounge</span>
+                  </div>
+                </div>
+                <div class="col-6 h-100">
+                  <div class="p-3">
+                    <i class="fa-sharp fa-regular fa-arrow-right"></i>
+                    <span class="fw-semibold"
+                      >On-Site Car Detailing & Wash</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <button class="my-5 mx-3 about-3-start-btn">
+              Get Started <i class="fa-solid fa-arrow-right"></i>
+            </button>
 
             <div class="counter-wrapper-3">
               <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
