--- a/main-files/home-landing-2.html
+++ b/main-files/home-landing-2.html
@@ -166,12 +166,15 @@
         <div class="offcanvas__overlay"></div>
 
         <!-- Header Section Start -->
-        <header id="header-sticky" class="header-2">
-            <div class="container custom-container">
+        <header id="header-sticky" class="header-1 style-inner">
+            <div class="container">
                 <div class="mega-menu-wrapper">
                     <div class="header-main">
                         <div class="logo">
                             <a href="index.html" class="header-logo">
+                                <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+                            </a>
+                            <a href="index.html" class="header-logo-2">
                                 <img src="assets/img/logo/black-logo.svg" alt="logo-img">
                             </a>
                         </div>
@@ -210,6 +213,18 @@
                                                                 </h4>
                                                             </div>
                                                         </div>
+                                                        <div class="col-lg-3">
+                                                          <div class="homemenu">
+                                                              <div class="homemenu-thumb">
+                                                                  <a href="index-3.html">
+                                                                      <img src="assets/img/homepage-3/navbar.png" alt="img">
+                                                                  </a>
+                                                              </div>
+                                                              <h4 class="homemenu-title">
+                                                                  <a href="index-3.html">Home Page 03</a>
+                                                              </h4>
+                                                          </div>
+                                                      </div>
                                                         <div class="col-lg-3">
                                                             <div class="homemenu">
                                                                 <div class="homemenu-thumb">
@@ -318,35 +333,14 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="category-oneadjust gap-6 d-flex align-items-center">
-                            <form action="#" class="search-toggle-box d-md-block">
-                                <div class="input-area">
-                                    <input type="text" placeholder="Search for products...">
-                                    <button class="cmn-btn">
-                                        Search
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
                         <div class="header-right d-flex justify-content-end align-items-center">
-                            <div class="icon-items">
-                                <a href="register.html" class="icon">
-                                    <i class="fa-regular fa-user"></i>
+                            <div class="menu-cart">
+                                <a href="shop-cart.html" class="cart-icon">
+                                    <i class="fa-regular fa-cart-shopping"></i>
                                 </a>
-                                <div class="content">
-                                    <h6>Account</h6>
-                                    <p>Hello, Login</p>
-                                </div>
                             </div>
-                            <div class="menu-cart-item">
-                                <div class="menu-cart">
-                                    <a href="shop-details.html" class="cart-icon style-2">
-                                        <i class="fa-regular fa-heart"></i>
-                                    </a>
-                                    <a href="shop-cart.html" class="cart-icon">
-                                        <i class="fa-regular fa-cart-shopping"></i>
-                                    </a>
-                                </div>
+                            <div class="header-button">
+                                <a href="contact.html" class="theme-btn">Contact Us <i class="fa-regular fa-car"></i></a>
                             </div>
                             <div class="header__hamburger d-xl-none my-auto">
                                 <div class="sidebar__toggle">
