--- a/main-files/car.html
+++ b/main-files/car.html
@@ -214,6 +214,18 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-3">
+                                                          <div class="homemenu">
+                                                              <div class="homemenu-thumb">
+                                                                  <a href="index-3.html">
+                                                                      <img src="assets/img/homepage-3/navbar.png" alt="img">
+                                                                  </a>
+                                                              </div>
+                                                              <h4 class="homemenu-title">
+                                                                  <a href="index-3.html">Home Page 03</a>
+                                                              </h4>
+                                                          </div>
+                                                      </div>
+                                                        <div class="col-lg-3">
                                                             <div class="homemenu">
                                                                 <div class="homemenu-thumb">
                                                                     <a href="home-landing.html">
