Update landing with homepage 3

--- a/index.html
+++ b/index.html
@@ -341,6 +341,28 @@
               <div class="demo-area">
                 <a
                   target="_blank"
+                  href="main-files/index-3.html"
+                  class="preview__item image d-block"
+                >
+                  <img
+                    src="landing/assets/images/landing-images/preview-home5.png"
+                    alt="image"
+                  />
+                </a>
+                <h3 class="text-center">
+                  <a
+                    target="_blank"
+                    href="main-files/index-3.html"
+                    class="primary-hover text-capitalize mt-30"
+                    >Home page 03</a
+                  >
+                </h3>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-4">
+              <div class="demo-area">
+                <a
+                  target="_blank"
                   href="main-files/home-landing.html"
                   class="preview__item image d-block"
                 >
