Fixed a minor issue

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
             >
               Our themes come with interactive design tools and features that
               <br />
-              could leave you feeling like a pro after just a few clicks.p>
+              could leave you feeling like a pro after just a few clicks.
             </p>
           </div>
 
