--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -2048,7 +2048,7 @@
     <section class="section-bg pt-5 home-car-details-3">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-5 home-car-details-3-title">
+          <div class="col-lg-5 home-car-details-3-title mb-3">
             <h2>Toyota Land Cruiser 300</h2>
 
             <div>
@@ -2060,9 +2060,9 @@
               <span>(3.5)</span>
             </div>
           </div>
-          <div class="col-md-7">
-            <div class="row">
-              <div class="col">
+          <div class="col-lg-7">
+            <div class="row g-1 g-md-2 g-xl-3">
+              <div class="col-md-6 col-lg-4">
                 <div class="home-car-details-3-card">
                   <div class="img">
                     <img src="assets/img/homepage-3/wheel.png" alt="RevAuto" />
@@ -2076,7 +2076,7 @@
                 </div>
               </div>
 
-              <div class="col">
+              <div class="col-md-6 col-lg-4">
                 <div class="home-car-details-3-card">
                   <div class="img">
                     <img src="assets/img/homepage-3/light.png" alt="RevAuto" />
@@ -2090,7 +2090,7 @@
                 </div>
               </div>
 
-              <div class="col">
+              <div class="col-md-6 col-lg-4">
                 <div class="home-car-details-3-card">
                   <div class="img">
                     <img src="assets/img/homepage-3/brake.png" alt="RevAuto" />
@@ -2110,7 +2110,7 @@
 
       <div class="container-fluid mt-4">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="left-side">
               <h4>Explore</h4>
               <p>
@@ -2124,14 +2124,14 @@
               <a href="#" class="navigate-btn mt-4">Buy Now</a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <img
               class="main-image"
               src="assets/img/hero/hero-car-1.png"
               alt="RevAuto"
             />
           </div>
-          <div class="col-md-3 d-flex flex-column gap-4">
+          <div class="col-lg-3 d-flex flex-column gap-4">
             <div class="col">
               <div class="home-car-details-3-card">
                 <div class="img">
@@ -2210,9 +2210,7 @@
               Welcome to RevAuto, your one-stop destination for all things
               automotive! At RevAuto, we are passionate about cars and committed
               to providing exceptional services to meet the needs of every
-              driver. Whether you're looking for top-quality vehicles or expert
-              auto services, we are here to ensure your driving experience is
-              nothing short of outstanding.
+              driver.
             </p>
 
             <ul class="my-4">
@@ -2223,9 +2221,7 @@
                 </div>
                 <p>
                   Browse our selection of high-quality new and certified
-                  pre-owned vehicles from top manufacturers. Whether you're
-                  after a sleek sedan, rugged SUV, or high-performance sports
-                  car, we have the perfect vehicle for you.
+                  pre-owned vehicles from top manufacturers. 
                 </p>
               </li>
               <li class="about-3-list">
@@ -2246,20 +2242,7 @@
                 </div>
                 <p>
                   Revitalize your ride with our customization options, from
-                  performance tuning to aesthetic enhancements. Upgrade your
-                  car’s exhaust system, suspension, wheels, or interior to match
-                  your personal style.
-                </p>
-              </li>
-              <li class="about-3-list">
-                <div class="about-3-list-icon section-bg">
-                  <i class="fa-solid fa-check"></i>
-                  <h4>Vehicle Financing & Trade-In Options:</h4>
-                </div>
-                <p>
-                  We offer competitive financing plans and hassle-free trade-in
-                  options to help make your car purchase easier and more
-                  affordable.
+                  performance tuning to aesthetic enhancements.
                 </p>
               </li>
             </ul>
